adding auth + apartment endpoints
