# app/Http/Controllers/AuthController.php
@@ -527,6 +527,64 @@ class AuthController extends Controller
             'created_at'
         )->find($id);
 
+        if (!$user || !$user->is_approved) {
+            return response()->json([
+                'message' => 'User not found'
+            ], 404);
+        }
+
+        return response()->json($user, 200);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/users/admin/{id}",
+     *     tags={"Auth"},
+     *     summary="Get a single user by ID with selected fields even if not approved",
+     *     security={{"sanctum":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="User ID",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="User data",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="id", type="integer"),
+     *             @OA\Property(property="first_name", type="string"),
+     *             @OA\Property(property="last_name", type="string"),
+     *             @OA\Property(property="birth_date", type="string", format="date"),
+     *             @OA\Property(property="phone", type="string"),
+     *             @OA\Property(property="photo", type="string"),
+     *             @OA\Property(property="id_photo_front", type="string"),
+     *             @OA\Property(property="id_photo_back", type="string"),
+     *             @OA\Property(property="wallet", type="number", format="float"),
+     *             @OA\Property(property="created_at", type="string", format="date-time")
+     *         )
+     *     ),
+     *     @OA\Response(response=404, description="User not found"),
+     *     @OA\Response(response=401, description="Unauthenticated")
+     * )
+     */
+    public function getUserByIdUn($id)
+    {
+        $user = User::select(
+            'id',
+            'first_name',
+            'last_name',
+            'birth_date',
+            'phone',
+            'photo',
+            'id_photo_front',
+            'id_photo_back',
+            'wallet',
+            'created_at'
+        )->find($id);
+
         if (!$user) {
             return response()->json([
                 'message' => 'User not found'
